<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".screens.ShoeDetailFragment">

        <!--==================== PREVIEW ====================-->

        <TextView
            android:id="@+id/txt_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/preview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_preview_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.newShoe.company}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_preview" />

        <TextView
            android:id="@+id/txt_preview_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@string/format_preview_size(viewModel.newShoe.size)}"
            app:layout_constraintStart_toStartOf="@+id/txt_preview_company"
            app:layout_constraintTop_toBottomOf="@+id/txt_preview_company" />

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:imageResource="@{viewModel.newShoe.image}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/txt_preview_company"
            app:layout_constraintTop_toBottomOf="@+id/txt_preview"
            tools:ignore="ContentDescription"
            tools:srcCompat="@drawable/nike" />
        <!-- we can use android:src instead of app:imageResource
            android:src="@{context.getDrawable(viewModel.newShoe.image)}" -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />

        <!--==================== INPUT SHOE NAME ====================-->

        <TextView
            android:id="@+id/txt_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/edt_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_shoe_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.newShoe.name}"
            app:layout_constraintBottom_toBottomOf="@+id/txt_shoe_name"
            app:layout_constraintStart_toEndOf="@+id/txt_shoe_name"
            app:layout_constraintTop_toTopOf="@+id/txt_shoe_name" />

        <!--==================== INPUT COMPANY ====================-->

        <TextView
            android:id="@+id/txt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_shoe_name" />

        <Spinner
            android:id="@+id/spn_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_company"
            app:layout_constraintStart_toEndOf="@+id/txt_company"
            app:layout_constraintTop_toTopOf="@+id/txt_company" />

        <!--==================== INPUT SIZE ====================-->

        <TextView
            android:id="@+id/txt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/spn_company"
            app:layout_constraintStart_toEndOf="@+id/spn_company"
            app:layout_constraintTop_toTopOf="@+id/spn_company" />

        <Spinner
            android:id="@+id/spn_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:dropDownWidth="48dp"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/txt_size"
            app:layout_constraintStart_toEndOf="@+id/txt_size"
            app:layout_constraintTop_toTopOf="@+id/txt_size" />

        <!--==================== INPUT DESCRIPTION ====================-->

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_company" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_shoe_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.newShoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" />

        <!--==================== BUTTONS ====================-->

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClickListener="@{() -> viewModel.onCancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:onClickListener="@{() -> viewModel.onSave()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>